2006-05-08  Matthias Clasen  <mclasen@redhat.com>

	* tests/convert-test.c (test_one_half): Use encoding names which 
	may work better on Solaris.  (#340434, Alessandro Vesely)

	* tests/keyfile-test.c (test_number): Add some tests for
	invalid floating point numbers.

	* glib/gkeyfile.c (g_key_file_parse_value_as_double): Return
	an error for the empty string.  (#339105, Morten Welinder)

	* glib/gscanner.c (g_scanner_config_template): Make const,
	noticed by Kjartan Maraas.

2006-05-06  Matthias Clasen  <mclasen@redhat.com>

	* glib/gkeyfile.c (g_key_file_set_string_list)
	(g_key_file_set_locale_string_list): Fix invalid memory
	reads.  (#340816, Nick Treleaven)

2006-05-04  Alexander Larsson  <alexl@redhat.com>

	* glib/gbase64.c: (g_base64_decode_step):
	Fix OOB write (#340538)

2006-05-03  Matthias Clasen  <mclasen@redhat.com>

	* tests/base64-test.c: Add some more tests.

	* glib/gbase64.c (g_base64_decode_step): Avoid writing
	beyond the guaranteed lenght of the output buffer, if
	there is padding.

	* tests/base64-test.c (test_incremental): Use malloced memory
	instead of stack-allocated, so that MALLOC_CHECK_=2 catches
	the OOB write...

	* glib/gbookmarkfile.c (g_bookmark_file_load_from_data): Remove
	an overzealous return_if_fail check that causes make check to 
	fail.

2006-05-02  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version
	
	* === Released 2.11.0 ===

	* NEWS: Updates

	* tests/casemap.txt: 
	* tests/casefold.txt: Regenerate from Unicode 5.0 data. 

Tue May  2 15:00:00 2006  Tim Janik  <timj@gtk.org>

	* glib/guniprop.c: Make interval_compare static.

	* tests/gobject/deftype.c: added test code from Behdad Esfahbod, 
	see #337128.

Tue May  2 14:18:25 2006  Tim Janik  <timj@gtk.org>

	* glib/goption.c (g_option_context_parse): fixed leak in short
	option parsing. rewrote parts of the code to be more concise to
	enhance readability. fixed exaggerated uses of strlen.

2006-04-28  Behdad Esfahbod  <behdad@gnome.org>
