@@ -1,3 +1,7 @@
+2006-05-09  Sebastian Wilhelmi  <wilhelmi@google.com>
+
+	* Remove obsolete gthread/gthread-solaris.c.
+
 2006-05-08  Matthias Clasen  <mclasen@redhat.com>
 
 	* tests/convert-test.c (test_one_half): Use encoding names which 
